06-AGIC-Backend-Hostname/kube-manifests/03-Ingress-backend-hostname.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver-ingress-service
  annotations:
    #appgw.ingress.kubernetes.io/backend-hostname: "internal.stacksimplify.com"
spec:
  ingressClassName: azure-application-gateway
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoserver-clusterip-service
                port: 
                  number: 80
